@@ -15,12 +15,15 @@
             <property name="visible">True</property>
             <property name="can_focus">False</property>
             <property name="label_xalign">0</property>
-            <property name="shadow_type">none</property>
+            <property name="shadow_type">in</property>
             <child>
               <object class="GtkGrid" id="grid2">
                 <property name="visible">True</property>
                 <property name="can_focus">False</property>
                 <property name="margin_left">12</property>
+                <property name="margin_right">4</property>
+                <property name="margin_top">4</property>
+                <property name="margin_bottom">4</property>
                 <property name="row_spacing">3</property>
                 <property name="column_spacing">4</property>
                 <child>
@@ -76,6 +79,7 @@
               <object class="GtkLabel" id="dn-frame-label">
                 <property name="visible">True</property>
                 <property name="can_focus">False</property>
+                <property name="label" translatable="yes"> Dossier properties </property>
                 <property name="use_markup">True</property>
               </object>
             </child>
