@@ -4,6 +4,7 @@
   <requires lib="gtk+" version="3.10"/>
   <object class="GtkDialog" id="DossierNewMiniDialog">
     <property name="can_focus">False</property>
+    <property name="border_width">5</property>
     <property name="type_hint">dialog</property>
     <child internal-child="vbox">
       <object class="GtkBox" id="dialog-vbox1">
@@ -54,10 +55,6 @@
           <object class="GtkGrid" id="grid1">
             <property name="visible">True</property>
             <property name="can_focus">False</property>
-            <property name="margin_left">8</property>
-            <property name="margin_right">8</property>
-            <property name="margin_top">4</property>
-            <property name="margin_bottom">4</property>
             <property name="row_spacing">3</property>
             <child>
               <object class="GtkBox" id="new-bin-parent">
